# face-api

./: .dockerignore  .env  .env.docker  .gitignore  API_QUICK_REFERENCE.md  API_TEST_COMMANDS.sh  CLUSTERING_CHECKLIST.md  CLUSTERING_FEATURE.md  CLUSTERING_INDEX.md  CLUSTERING_TESTS.sh  CURL_REFERENCE.md  DELIVERABLES.md  DEPLOYMENT.md  DIGEST_CORRECTIONS_SUMMARY.md  DIGEST_ENDPOINT_TESTS.md  DIGEST_ENHANCEMENT_SUMMARY.md  DIGEST_IMPROVEMENTS_COMPLETE.md  DOCKER_README.md  DOCKER_SETUP.md  DOCKER_SUMMARY.md  Dockerfile  Dockerfile.prod  FINAL_IMPLEMENTATION_REPORT.md  FINAL_STATUS.md  Face_Recognition_API.postman_collection.json  Face_Recognition_API.postman_environment.json  IMPLEMENTATION_SUMMARY.md  INSTRUCTIONS.md  Makefile  QUICK_REFERENCE.md  SEARCH_FACE_IMPROVEMENTS.md  SETUP_SUMMARY.md  app.yaml  cluster_faces_batch.py  create_thumbnails.py  docker-compose.prod.yml  docker-compose.yml  docker.sh  face_clustering.py  face_embedding_processor.py  (+13 more)
.github/workflows/: main.yml
Jiya Maam Engagement/Candid Photo/: err
media_service/: app.py  requirements.txt
