[project]
name = "dr"
version = "0.1.0"
description = "Google Drive file copy utilities and facial processing services"
requires-python = ">=3.8"

dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "deepface>=0.0.79",
    "tensorflow>=2.13.0",
    "tf-keras>=2.13.0",
    "qdrant-client>=1.7.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "faiss-cpu>=1.7.4",
    "pillow>=10.4.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "google-cloud-storage>=2.10.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# If your project is a single-file module (face_service_fastapi.py, face_extraction.py, etc.)
# Use include = [...] instead of packages = [...]
[tool.hatch.build.targets.wheel]
include = [
    "face_service_fastapi.py",
    "face_extraction.py"
]

[tool.uv]
dev-dependencies = []
